--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -144,7 +144,7 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="index">
+            <a class="nav-link" href="/index">
               <i class="icon-grid menu-icon"></i>
               <span class="menu-title">Dashboard</span>
             </a>
@@ -194,7 +194,17 @@
               <ul class="nav flex-column sub-menu">
                 <li class="nav-item"> <a class="nav-link" href="/viewbrand">Brand</a></li>
               </ul>
-            </div>             
+            </div>
+            <div class="collapse" id="tables">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="/viewsupplier">Supplier</a></li>
+              </ul>
+            </div>
+            <div class="collapse" id="tables">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="/viewdrugs">Drugs</a></li>
+              </ul>
+            </div>                           
           </li>     
       </nav>
       <!-- SideNav-->
