--- a/src/main/resources/templates/viewcategory.html
+++ b/src/main/resources/templates/viewcategory.html
@@ -197,7 +197,12 @@
               <ul class="nav flex-column sub-menu">
                 <li class="nav-item"> <a class="nav-link" href="/viewbrand">Brand</a></li>
               </ul>
-            </div>               
+            </div>
+            <div class="collapse" id="tables">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="/viewsupplier">Supplier</a></li>
+              </ul>
+            </div>                           
           </li>     
       </nav>
       <!-- SideNav-->
