--- a/src/main/resources/templates/viewpharmacist.html
+++ b/src/main/resources/templates/viewpharmacist.html
@@ -156,7 +156,7 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="index">
+            <a class="nav-link" href="/index">
               <i class="icon-grid menu-icon"></i>
               <span class="menu-title">Dashboard</span>
             </a>
@@ -207,6 +207,11 @@
                 <li class="nav-item"> <a class="nav-link" href="/viewbrand">Brand</a></li>
               </ul>
             </div>   
+            <div class="collapse" id="tables">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="/viewsupplier">Supplier</a></li>
+              </ul>
+            </div>            
           </li>     
       </nav>
       <!-- SideNav-->
